<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/notes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:fontFamily="@font/gilroy_extra_bold"
            android:maxLines="2"
            android:text="@string/notes"
            android:textColor="@color/black"
            android:textSize="28dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/personal_messages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:fontFamily="@font/gilroy_semibold"
            android:text="@string/personal_messages_to_you"
            android:textColor="@color/black"
            android:textSize="18dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/notes" />


        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_meena"
            android:layout_width="match_parent"
            android:layout_height="360dp"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            app:cardCornerRadius="8dp"

            app:cardElevation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/personal_messages">

            <FrameLayout

                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/news_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="matrix"
                    android:src="@drawable/photo_1" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/trendiing_gradient_shape" />

            </FrameLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_gravity="bottom"
                android:orientation="vertical"
                android:paddingStart="22dp"
                android:paddingEnd="22dp"
                android:paddingBottom="22dp">

                <TextView
                    android:id="@+id/news_title_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:ellipsize="end"
                    android:fontFamily="@font/gilroy_extra_bold"
                    android:gravity="bottom"
                    android:lines="3"
                    android:text="@string/meena_23"
                    android:textColor="@color/white"
                    android:textSize="22sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/news_author"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/gilroy_extra_bold"
                        android:gravity="end"
                        android:lines="1"
                        android:text="@string/tap_to_review_"
                        android:textColor="@color/white"
                        android:textSize="15sp" />


                </LinearLayout>
            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/interested_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="36dp"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/gilroy_extra_bold"
            android:text="@string/interested_in_you"
            android:textColor="@color/black"
            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card_view_meena" />

        <LinearLayout
            android:id="@+id/ugradeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="36dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/interested_text">


            <TextView
                android:id="@+id/premium_members"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.8"
                android:fontFamily="@font/gilroy_semibold"
                android:maxLines="2"
                android:text="@string/premium_member_can"
                android:textColor="@color/gray"
                android:textSize="15sp" />

            <Button
                android:id="@+id/continue_otp_verify"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="4dp"
                android:layout_weight="0.4"
                android:background="@drawable/chip_button"
                android:fontFamily="@font/inter_bold"
                android:text="@string/upgrade"
                android:textAllCaps="false"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/otp_et" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginHorizontal="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ugradeLayout">

            <androidx.cardview.widget.CardView
                android:id="@+id/card_view_beena"
                android:layout_width="0dp"
                android:layout_height="360dp"
                android:layout_gravity="center"
                android:layout_margin="4dp"
                android:layout_weight="0.5"
                app:cardCornerRadius="8dp"
                app:cardElevation="0dp">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <androidx.appcompat.widget.AppCompatImageView

                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        android:id="@+id/teena_iv"
                        android:src="@drawable/photo_2" />

                    <View
                        android:layout_width="match_parent"

                        android:layout_height="match_parent"
                        android:background="@drawable/trendiing_gradient_shape" />

                </FrameLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_gravity="bottom"
                    android:orientation="vertical"
                    android:paddingStart="22dp"
                    android:paddingEnd="22dp"
                    android:paddingBottom="22dp">

                    <TextView
                        android:id="@+id/beenaCV"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:ellipsize="end"
                        android:fontFamily="@font/gilroy_extra_bold"
                        android:gravity="bottom"
                        android:lines="3"
                        android:text="@string/teena"
                        android:textColor="@color/white"
                        android:textSize="22sp" />


                </LinearLayout>


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_view_teena"
                android:layout_width="0dp"
                android:layout_height="360dp"
                android:layout_gravity="center"
                android:layout_margin="15dp"
                android:layout_weight="0.5"
                app:cardCornerRadius="8dp"
                app:cardElevation="0dp">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">


                    <androidx.appcompat.widget.AppCompatImageView

                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        android:id="@+id/beena_iv"
                        android:src="@drawable/photo_3" />

                    <View
                        android:layout_width="match_parent"

                        android:layout_height="match_parent"
                        android:background="@drawable/trendiing_gradient_shape" />

                </FrameLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_gravity="bottom"
                    android:orientation="vertical"
                    android:paddingStart="22dp"
                    android:paddingEnd="22dp"
                    android:paddingBottom="22dp">

                    <TextView
                        android:id="@+id/teenaCV"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:ellipsize="end"
                        android:fontFamily="@font/gilroy_extra_bold"
                        android:gravity="bottom"
                        android:lines="3"
                        android:text="@string/beena"
                        android:textColor="@color/white"
                        android:textSize="22sp" />


                </LinearLayout>


            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>