<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:paddingHorizontal="24dp"
    android:layout_height="match_parent"
    tools:context=".PhoneNumberFragment">

    <TextView
        android:id="@+id/actual_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:fontFamily="@font/inter_family"
        android:text="@string/actual_no_complete"
        android:textColor="@color/black"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/edit_number"
android:layout_marginStart="4dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="120dp"
        android:layout_width="wrap_content"
        app:layout_constraintStart_toEndOf="@id/actual_number"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_mode_edit_outline_black_24dp"
    />

    <TextView
        android:id="@+id/enter_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_extra_bold"
        android:text="@string/enter_the_otp"
        android:textColor="@color/black"
        android:textSize="30dp"
        app:layout_constraintTop_toBottomOf="@id/actual_number"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent" />


    <EditText
        android:id="@+id/otp_et"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_border"
        android:fontFamily="@font/inter_extra_bold"
        android:text="1234"
        android:textColor="@color/black"
        android:textSize="18dp"
        android:layout_marginTop="12dp"

        android:paddingVertical="12dp"
        android:paddingHorizontal="18dp"

        app:layout_constraintTop_toBottomOf="@id/enter_phone"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/continue_otp_verify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_continue"
        android:fontFamily="@font/inter_bold"
        android:background="@drawable/chip_button"
        android:textAllCaps="false"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/otp_et"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:id="@+id/time_lefy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/inter_extra_bold"
        android:gravity="center"
        android:text="00:59"
        android:textColor="@color/black"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/continue_otp_verify"
        app:layout_constraintStart_toEndOf="@id/continue_otp_verify"
        app:layout_constraintTop_toBottomOf="@id/otp_et" />


</androidx.constraintlayout.widget.ConstraintLayout>